# birbal

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  embedding.py  example.env  llm.py  main.py  parse_org_roam.py  pyproject.toml  query.py  server.py
birbal/: ai.py  cli.py  config.py  embedding.py  ingest.py  llm.py  main.py  query.py  server.py  store.py  sync.py  watcher.py
birbal/migrations/: 1766959533794-create-table-nodes.sql  1766959533795-create-node-indexes.sql
birbal/models/: __init__.py  base.py  chroma.py  mlx_provider.py  ollama.py  ollama_provider.py  openai_provider.py
birbal/parsers/: __init__.py  base.py  html.py  org.py
birbal/sources/: __init__.py  base.py  file_system.py
birbal/stores/: __init__.py  base.py  chroma.py  pg.py
models/: chroma.py
parsers/: org.py  org_roam.py
